# FastAPI-Phonebook-Redis

./: .env.dist  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/: __init__.py  exception_handlers.py  health.py
src/api/v1/: deps.py  phonebook.py
src/core/: config.py  domain_exceptions.py  logging.py
src/schemas/: phonebook_schema.py
src/services/: phonebook_service.py
src/utils/: phone.py
tests/: conftest.py  test_config.py  test_exception_handlers.py  test_main.py  test_phonebook_api.py  test_phonebook_service.py  test_utils_phone.py
