[project]
name = "fastapi-ave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "environs==14.3.0",
    "fastapi==0.120.1",
    "httpx==0.28.1",
    "pre-commit>=4.5.0",
    "pydantic==2.12.3",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "redis==5.2.1",
    "uvicorn==0.38.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

extend-exclude = ["migrations/*"]

[tool.ruff.format]
# опционально; можно убрать весь блок, если используешь Black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
# правила теперь лежат в блоке lint.*
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["."]
combine-as-imports = true
force-single-line = false
